<resources>
    <string name="app_name">LocalDemo</string>
    <string name="current_language">用户当前的语言：%s</string>
    <string name="test_page">测试界面</string>
    <string name="multi_language">多语言</string>
    <string name="open_setting_page">打开设置页</string>
    <string name="test_content">自5月18日零时起，全区各百货商场和商业综合体（不含超市部分）、家电商场、家居商场、专业市场等企业（单位）暂停营业，开业时间另行通知。</string>
    <string name="tip_select_language">请选择语言</string>
    <string name="local_china">简体中文</string>
    <string name="local_english">英文</string>
    <string name="local_japan">日语</string>
    <string name="popu_window">PopuWindow</string>
    <string name="popu_content">这是PopuWindow的测试？</string>
</resources>
